--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 venv/
 __pycache__/
+
+*.pyc
+build/
+dist/
+test-results/
+localsettings.py*
+*~
+.idea
+logs/*
+!logs/empty
+.vscode
+.DS_Store
+data/
