--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,28 +1,28 @@
 Brotli==1.0.9
-certifi==2020.12.5
+certifi==2021.10.8
 chardet==4.0.0
-click==7.1.2
-dash==1.19.0
-dash-core-components==1.15.0
-dash-html-components==1.1.2
-dash-renderer==1.9.0
-dash-table==4.11.2
-Flask==1.1.2
-Flask-Compress==1.9.0
+charset-normalizer==2.0.12
+click==8.0.4
+dash==2.2.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Flask==2.0.3
+Flask-Compress==1.10.1
 future==0.18.2
-#gunicorn==20.0.4
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-numpy==1.21.2
-pandas==1.3.3
-plotly==4.14.3
+idna==3.3
+itsdangerous==2.1.0
+Jinja2==3.0.3
+MarkupSafe==2.1.0
+numpy==1.22.2
+pandas==1.4.1
+plotly==5.6.0
 python-dateutil==2.8.2
-pytz==2021.1
-requests==2.25.1
+pytz==2021.3
+requests==2.27.1
 retrying==1.3.3
-six==1.15.0
+six==1.16.0
 tenacity==8.0.1
-urllib3==1.26.3
-Werkzeug==1.0.1
+urllib3==1.26.8
+Werkzeug==2.0.3
+dash-bootstrap-components==1.0.3
